--- a/index.html
+++ b/index.html
@@ -460,31 +460,21 @@ StatCounter"></a></div></noscript>
     <p><strong>Eduardo Dávila</strong><br />
 Assistant Professor of Economics, Yale University<br />
 <a href="mailto:eduardo.davila@yale.edu" target="_blank">eduardo.davila@yale.edu</a><br />
-<strong><a href="davila_cv.pdf" target="_blank">Full CV here (pdf)</a></strong></p>
+<strong><a href="/cv/davila_cv.pdf">Full CV here (pdf)</a></strong></p>
 
-<p><strong>Updates</strong></p>
-
-<p><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a>, with Cecilia Parlatore, August 2019 (Updated draft)
+<p><strong>Updates</strong><br />
+<a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a>, with Cecilia Parlatore, August 2019 (Updated draft)
 <a href="davila_goldstein_deposit.pdf" target="_blank">Optimal Deposit Insurance</a>, with Itay Goldstein, August 2019 (Updated draft)</p>
 
 <p><strong>Publications</strong><br />
 Pecuniary Externalities in Economies with Financial Frictions, with Anton Korinek<br />
-<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. Link, BibTeX</p>
+<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://academic.oup.com/restud/article-abstract/85/1/352/2982065?redirectedFrom=fulltext" target="_blank">Link</a></strong>, <strong><a href="research/davila_korinek_pecuniary.bib" target="_blank">BibTeX</a></strong></p>
 
 <p>House Price Beliefs and Mortgage Leverage Choice, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel, October 2019<br />
 <em>The Review of Economic Studies</em>, Forthcoming.</p>
 
 <p>Does Size Matter? Bailouts with Large and Small Banks, with Ansgar Walther, April 2019<br />
 <em>Journal of Financial Economics</em>, Forthcoming.</p>
-
-<p><strong>​​​Education</strong><br />
-Ph.D. in Economics, Harvard University, 2014<br />
-B.A. in Economics, Universitat Pompeu Fabra, 2008</p>
-
-<p><strong>Academic Positions</strong><br />
-Assistant Professor of Economics, Yale University, Economics Department, 2018-<br />
-Assistant Professor of Finance, New York University, Stern School of Business, Finance Department, 2014-2019<br />
-NBER, Faculty Research Fellow, 2017-</p>
 
 
     <div class="row">
