--- a/cv/index.html
+++ b/cv/index.html
@@ -370,6 +370,9 @@ Pecuniary Externalities in Economies with Financial Frictions, with Anton Korine
 <p>Does Size Matter? Bailouts with Large and Small Banks, with Ansgar Walther, April 2019<br />
 <em>Journal of Financial Economics</em>, Forthcoming.</p>
 
+<p>Using Elasticities to Derive Optimal Bankruptcy Exemptions, August 2019<br />
+<em>The Review of Economic Studies</em>, Forthcoming.</p>
+
 <p><strong>​​​Education</strong><br />
 Ph.D. in Economics, Harvard University, 2014<br />
 B.A. in Economics, Universitat Pompeu Fabra, 2008</p>
