--- a/index.html
+++ b/index.html
@@ -476,6 +476,9 @@ Pecuniary Externalities in Economies with Financial Frictions, with Anton Korine
 <p>Does Size Matter? Bailouts with Large and Small Banks, with Ansgar Walther, April 2019<br />
 <em>Journal of Financial Economics</em>, Forthcoming.</p>
 
+<p>Using Elasticities to Derive Optimal Bankruptcy Exemptions, August 2019<br />
+<em>The Review of Economic Studies</em>, Forthcoming.</p>
+
 
     <div class="row">
 
