--- a/research/index.html
+++ b/research/index.html
@@ -367,9 +367,10 @@ StatCounter"></a></div></noscript>
 <p><strong><a href="davila_walther_bailouts.pdf" target="_blank">Does Size Matter? Bailouts with Large and Small Banks</a></strong>, with Ansgar Walther, April 2019<br />
 <em>Journal of Financial Economics</em>, Forthcoming. Link, BibTeX.</p>
 
-<h1 id="under-revision">Under Revision</h1>
+<p><strong><a href="davila_bankruptcy.pdf" target="_blank">Using Elasticities to Derive Optimal Bankruptcy Exemptions</a></strong>, August 2019<br />
+<em>The Review of Economic Studies</em>, Forthcoming. Link, BibTeX.</p>
 
-<p><strong><a href="davila_bankruptcy.pdf" target="_blank">Using Elasticities to Derive Optimal Bankruptcy Exemptions</a></strong>, August 2019</p>
+<h1 id="under-revision">Under Revision</h1>
 
 <p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore, March 2019  ​</p>
 
