--- a/research/index.html
+++ b/research/index.html
@@ -374,11 +374,11 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore, March 2019  ​</p>
 
-<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>, September 2017</p>
+<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>, September 2017 (revised draft coming soon)</p>
 
 <h1 id="working-papers">Working Papers</h1>
 
-<p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, August 2018</p>
+<p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, August 2018 (revised draft coming soon)</p>
 
 <p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, January 2019</p>
 
