--- a/research/index.html
+++ b/research/index.html
@@ -358,17 +358,17 @@ StatCounter"></a></div></noscript>
   <div class="article-style" itemprop="articleBody">
 
 <p><strong><a href="pecuniaryexternalities.pdf" target="_blank">Pecuniary Externalities in Economies with Financial Frictions</a></strong>, with Anton Korinek.<br />
-<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://academic.oup.com/restud/article-abstract/85/1/352/2982065?redirectedFrom=fulltext" target="_blank">Link</a></strong>, <strong><a href="davila_korinek_pecuniary.bib" target="_blank">BibTeX</a></strong><br />
+<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://doi.org/10.1093/restud/rdx010" target="_blank">Link</a></strong>, <strong><a href="davila_korinek_pecuniary.bib" target="_blank">BibTeX</a></strong><br />
 <sub> This paper subsumes my earlier working paper &ldquo;<a href="davila_dissecting.pdf" target="_blank">Dissecting Fire Sales Externalities</a>&rdquo;. It was previously circulated as &ldquo;Fire-Sale Externalities&rdquo;. <sub></p>
 
 <p><strong><a href="beliefsleverage.pdf" target="_blank">House Price Beliefs and Mortgage Leverage Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel, October 2018<br />
-<em>The Review of Economic Studies</em>, Forthcoming. Link, BibTeX.</p>
+<em>The Review of Economic Studies</em>, Forthcoming. <strong><a href="https://doi.org/10.1093/restud/rdy068" target="_blank">Link</a></strong>, BibTeX.</p>
 
 <p><strong><a href="davila_walther_bailouts.pdf" target="_blank">Does Size Matter? Bailouts with Large and Small Banks</a></strong>, with Ansgar Walther, April 2019<br />
-<em>Journal of Financial Economics</em>, Forthcoming. Link, BibTeX.</p>
+<em>Journal of Financial Economics</em>, Forthcoming. <strong><a href="https://doi.org/10.1016/j.jfineco.2019.09.005" target="_blank">Link</a></strong>, BibTeX.</p>
 
 <p><strong><a href="davila_bankruptcy.pdf" target="_blank">Using Elasticities to Derive Optimal Bankruptcy Exemptions</a></strong>, August 2019<br />
-<em>The Review of Economic Studies</em>, Forthcoming. Link, BibTeX.</p>
+<em>The Review of Economic Studies</em>, Forthcoming. <strong><a href="https://doi.org/10.1093/restud/rdz043" target="_blank">Link</a></strong>, BibTeX.</p>
 
 <h1 id="under-revision">Under Revision</h1>
 
