--- a/index.html
+++ b/index.html
@@ -462,22 +462,26 @@ Assistant Professor of Economics, Yale University<br />
 <a href="mailto:eduardo.davila@yale.edu" target="_blank">eduardo.davila@yale.edu</a><br />
 <strong><a href="/cv/davila_cv.pdf">Full CV here (pdf)</a></strong></p>
 
-<p><strong>Updates</strong><br />
-<a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a>, with Cecilia Parlatore, August 2019 (Updated draft)
-<a href="davila_goldstein_deposit.pdf" target="_blank">Optimal Deposit Insurance</a>, with Itay Goldstein, August 2019 (Updated draft)</p>
+<p><strong>New and updated drafts</strong></p>
+
+<p><a href="research/davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a>, with Cecilia Parlatore, November 2019</p>
+
+<p><a href="research/davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a>, with Cecilia Parlatore, August 2019</p>
+
+<p><a href="research/davila_goldstein_deposit.pdf" target="_blank">Optimal Deposit Insurance</a>, with Itay Goldstein, August 2019</p>
 
 <p><strong>Publications</strong><br />
-Pecuniary Externalities in Economies with Financial Frictions, with Anton Korinek<br />
-<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://academic.oup.com/restud/article-abstract/85/1/352/2982065?redirectedFrom=fulltext" target="_blank">Link</a></strong>, <strong><a href="research/davila_korinek_pecuniary.bib" target="_blank">BibTeX</a></strong></p>
+Pecuniary Externalities in Economies with Financial Frictions, with Anton Korinek.
+<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://doi.org/10.1093/restud/rdx010" target="_blank">Link</a></strong>, <strong><a href="research/davila_korinek_pecuniary.bib" target="_blank">BibTeX</a></strong></p>
 
-<p>House Price Beliefs and Mortgage Leverage Choice, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel, October 2019<br />
-<em>The Review of Economic Studies</em>, Forthcoming.</p>
+<p>House Price Beliefs and Mortgage Leverage Choice, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel.
+<em>The Review of Economic Studies</em>, Volume 86, Issue 6, November 2019, Pages 2403–2452. <strong><a href="https://doi.org/10.1093/restud/rdy068" target="_blank">Link</a></strong>, <strong><a href="research/bdks_beliefs_leverage.bib" target="_blank">BibTeX</a></strong>.</p>
 
-<p>Does Size Matter? Bailouts with Large and Small Banks, with Ansgar Walther, April 2019<br />
-<em>Journal of Financial Economics</em>, Forthcoming.</p>
+<p>Does Size Matter? Bailouts with Large and Small Banks, with Ansgar Walther, April 2019.
+<em>Journal of Financial Economics</em>, Forthcoming. <strong><a href="https://doi.org/10.1016/j.jfineco.2019.09.005" target="_blank">Link</a></strong></p>
 
-<p>Using Elasticities to Derive Optimal Bankruptcy Exemptions, August 2019<br />
-<em>The Review of Economic Studies</em>, Forthcoming.</p>
+<p>Using Elasticities to Derive Optimal Bankruptcy Exemptions, August 2019.
+<em>The Review of Economic Studies</em>, Forthcoming. <strong><a href="https://doi.org/10.1093/restud/rdz043" target="_blank">Link</a></strong></p>
 
 
     <div class="row">
