--- a/teaching/index.html
+++ b/teaching/index.html
@@ -363,13 +363,13 @@ StatCounter"></a></div></noscript>
 
 <ul>
 <li>Mathematical Economics: General Equilibrium Theory  (Econ 350a)</li>
-<li>General Economic Theory: Microeconomics (Econ 500a)</li>
+<li>General Economic Theory: Microeconomics (Econ 500a) (with Larry Samuelson)</li>
 </ul>
 
 <h2 id="spring-2020">Spring 2020</h2>
 
 <ul>
-<li>Mathematical Economics II: Foundations of Macroeconomics and Finance (Econ 531b)<br /></li>
+<li>Mathematical Economics II: Foundations of Macroeconomics and Finance (Econ 531b)  (with Herakles Polemarchakis)</li>
 </ul>
 </div>
   
