--- a/research/index.html
+++ b/research/index.html
@@ -361,18 +361,17 @@ StatCounter"></a></div></noscript>
 <em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://doi.org/10.1093/restud/rdx010" target="_blank">Link</a></strong>, <strong><a href="davila_korinek_pecuniary.bib" target="_blank">BibTeX</a></strong><br />
 <sub> This paper subsumes my earlier working paper &ldquo;<a href="davila_dissecting.pdf" target="_blank">Dissecting Fire Sales Externalities</a>&rdquo;. It was previously circulated as &ldquo;Fire-Sale Externalities&rdquo;. <sub></p>
 
-<p><strong><a href="beliefsleverage.pdf" target="_blank">House Price Beliefs and Mortgage Leverage Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel, October 2018<br />
-<em>The Review of Economic Studies</em>, Forthcoming. <strong><a href="https://doi.org/10.1093/restud/rdy068" target="_blank">Link</a></strong>, BibTeX.</p>
+<p><strong><a href="beliefsleverage.pdf" target="_blank">House Price Beliefs and Mortgage Leverage Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel. <em>The Review of Economic Studies</em>, Volume 86, Issue 6, November 2019, Pages 2403–2452. <strong><a href="https://doi.org/10.1093/restud/rdy068" target="_blank">Link</a></strong>, <strong><a href="bdks_beliefs_leverage.bib" target="_blank">BibTeX</a></strong>.</p>
 
-<p><strong><a href="davila_walther_bailouts.pdf" target="_blank">Does Size Matter? Bailouts with Large and Small Banks</a></strong>, with Ansgar Walther, April 2019<br />
+<p><strong><a href="davila_walther_bailouts.pdf" target="_blank">Does Size Matter? Bailouts with Large and Small Banks</a></strong>, with Ansgar Walther, April 2019.
 <em>Journal of Financial Economics</em>, Forthcoming. <strong><a href="https://doi.org/10.1016/j.jfineco.2019.09.005" target="_blank">Link</a></strong>, BibTeX.</p>
 
-<p><strong><a href="davila_bankruptcy.pdf" target="_blank">Using Elasticities to Derive Optimal Bankruptcy Exemptions</a></strong>, August 2019<br />
+<p><strong><a href="davila_bankruptcy.pdf" target="_blank">Using Elasticities to Derive Optimal Bankruptcy Exemptions</a></strong>, August 2019.
 <em>The Review of Economic Studies</em>, Forthcoming. <strong><a href="https://doi.org/10.1093/restud/rdz043" target="_blank">Link</a></strong>, BibTeX.</p>
 
 <h1 id="under-revision">Under Revision</h1>
 
-<p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore, March 2019  ​</p>
+<p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore, November 2019  ​</p>
 
 <p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>, September 2017 (revised draft coming soon)</p>
 
