--- a/research/index.html
+++ b/research/index.html
@@ -358,10 +358,10 @@ StatCounter"></a></div></noscript>
   <div class="article-style" itemprop="articleBody">
 
 <p><strong><a href="pecuniaryexternalities.pdf" target="_blank">Pecuniary Externalities in Economies with Financial Frictions</a></strong>, with Anton Korinek.<br />
-<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://doi.org/10.1093/restud/rdx010" target="_blank">Link</a></strong>, <strong><a href="davila_korinek_pecuniary.bib" target="_blank">BibTeX</a></strong><br />
+<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://doi.org/10.1093/restud/rdx010" target="_blank">Link</a></strong>, <strong><a href="davila_korinek_pecuniary.txt" target="_blank">BibTeX</a></strong><br />
 <sub> This paper subsumes my earlier working paper &ldquo;<a href="davila_dissecting.pdf" target="_blank">Dissecting Fire Sales Externalities</a>&rdquo;. It was previously circulated as &ldquo;Fire-Sale Externalities&rdquo;. <sub></p>
 
-<p><strong><a href="beliefsleverage.pdf" target="_blank">House Price Beliefs and Mortgage Leverage Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel. <em>The Review of Economic Studies</em>, Volume 86, Issue 6, November 2019, Pages 2403–2452. <strong><a href="https://doi.org/10.1093/restud/rdy068" target="_blank">Link</a></strong>, <strong><a href="bdks_beliefs_leverage.bib" target="_blank">BibTeX</a></strong>.</p>
+<p><strong><a href="beliefsleverage.pdf" target="_blank">House Price Beliefs and Mortgage Leverage Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel. <em>The Review of Economic Studies</em>, Volume 86, Issue 6, November 2019, Pages 2403–2452. <strong><a href="https://doi.org/10.1093/restud/rdy068" target="_blank">Link</a></strong>, <strong><a href="bdks_beliefs_leverage.txt" target="_blank">BibTeX</a></strong>.</p>
 
 <p><strong><a href="davila_walther_bailouts.pdf" target="_blank">Does Size Matter? Bailouts with Large and Small Banks</a></strong>, with Ansgar Walther, April 2019.
 <em>Journal of Financial Economics</em>, Forthcoming. <strong><a href="https://doi.org/10.1016/j.jfineco.2019.09.005" target="_blank">Link</a></strong>, BibTeX.</p>
@@ -369,21 +369,22 @@ StatCounter"></a></div></noscript>
 <p><strong><a href="davila_bankruptcy.pdf" target="_blank">Using Elasticities to Derive Optimal Bankruptcy Exemptions</a></strong>, August 2019.
 <em>The Review of Economic Studies</em>, Forthcoming. <strong><a href="https://doi.org/10.1093/restud/rdz043" target="_blank">Link</a></strong>, BibTeX.</p>
 
+<p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore, January 2020.
+<em>The Journal of Finance</em>, Forthcoming.</p>
+
 <h1 id="under-revision">Under Revision</h1>
 
-<p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore, November 2019  ​</p>
-
-<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>, September 2017 (revised draft coming soon)</p>
+<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>, January 2020</p>
 
 <h1 id="working-papers">Working Papers</h1>
 
 <p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, August 2018 (revised draft coming soon)</p>
 
-<p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, September 2019</p>
+<p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, September 2019 (revised draft coming soon)</p>
 
-<p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, August 2019</p>
+<p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, January 2020</p>
 
-<p><strong><a href="davila_goldstein_deposit.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein, August 2019</p>
+<p><strong><a href="davila_goldstein_deposit.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein, January 2020</p>
 
 <p><strong>​<a href="davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>, with Thomas Philippon, December 2017 (substantially revised draft coming soon)</p>
 
