--- a/cv/index.html
+++ b/cv/index.html
@@ -355,25 +355,7 @@ StatCounter"></a></div></noscript>
 
 <div class="universal-wrapper">
   
-  <div class="article-style" itemprop="articleBody"><p>Eduardo Dávila<br />
-Assistant Professor of Economics, Yale University<br />
-<a href="mailto:eduardo.davila@yale.edu" target="_blank">eduardo.davila@yale.edu</a><br />
-<strong><a href="davila_cv.pdf" target="_blank">Full CV here (pdf)</a></strong></p>
-
-<p><strong>Publications</strong><br />
-<strong><a href="pecuniaryexternalities.pdf" target="_blank">Pecuniary Externalities in Economies with Financial Frictions</a></strong>, with Anton Korinek.<br />
-<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://doi.org/10.1093/restud/rdx010" target="_blank">Link</a></strong>, <strong><a href="davila_korinek_pecuniary.txt" target="_blank">BibTeX</a></strong></p>
-
-<p><strong><a href="beliefsleverage.pdf" target="_blank">House Price Beliefs and Mortgage Leverage Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel. <em>The Review of Economic Studies</em>, Volume 86, Issue 6, November 2019, Pages 2403–2452. <strong><a href="https://doi.org/10.1093/restud/rdy068" target="_blank">Link</a></strong>, <strong><a href="bdks_beliefs_leverage.txt" target="_blank">BibTeX</a></strong>.</p>
-
-<p><strong><a href="davila_walther_bailouts.pdf" target="_blank">Does Size Matter? Bailouts with Large and Small Banks</a></strong>, with Ansgar Walther, April 2019.
-<em>Journal of Financial Economics</em>, Forthcoming. <strong><a href="https://doi.org/10.1016/j.jfineco.2019.09.005" target="_blank">Link</a></strong>, BibTeX.</p>
-
-<p><strong><a href="davila_bankruptcy.pdf" target="_blank">Using Elasticities to Derive Optimal Bankruptcy Exemptions</a></strong>, August 2019.
-<em>The Review of Economic Studies</em>, Forthcoming. <strong><a href="https://doi.org/10.1093/restud/rdz043" target="_blank">Link</a></strong>, BibTeX.</p>
-
-<p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore, January 2020.
-<em>The Journal of Finance</em>, Forthcoming.</p>
+  <div class="article-style" itemprop="articleBody"><p><strong><a href="davila_cv.pdf" target="_blank">Full CV here (pdf)</a></strong></p>
 
 <p><strong>​​​Education</strong><br />
 Ph.D. in Economics, Harvard University, 2014<br />
@@ -381,7 +363,7 @@ B.A. in Economics, Universitat Pompeu Fabra, 2008</p>
 
 <p><strong>Academic Positions</strong><br />
 Assistant Professor of Economics, Yale University, Economics Department, 2018-<br />
-Assistant Professor of Finance, New York University, Stern School of Business, Finance Department, 2014-2019<br />
+Assistant Professor of Finance, New York University, Stern School of Business, 2014-2019<br />
 NBER, Faculty Research Fellow, 2017-</p>
 </div>
   
