--- a/cv/index.html
+++ b/cv/index.html
@@ -362,8 +362,7 @@ Ph.D. in Economics, Harvard University, 2014<br />
 B.A. in Economics, Universitat Pompeu Fabra, 2008</p>
 
 <p><strong>Academic Positions</strong><br />
-Assistant Professor of Economics, Yale University, Economics Department, 2018-<br />
-Assistant Professor of Finance, New York University, Stern School of Business, 2014-2019<br />
+Assistant Professor of Economics, Yale University, 2018-<br />
 NBER, Faculty Research Fellow, 2017-</p>
 </div>
   
