--- a/404.html
+++ b/404.html
@@ -335,6 +335,13 @@ StatCounter"></a></div></noscript>
   
   
   
+  <h2>Latest</h2>
+  <ul>
+    
+      <li><a href="/teaching/2019_2020/">Teaching</a></li>
+    
+  </ul>
+  
 
 </div>
 
