--- a/cv/index.html
+++ b/cv/index.html
@@ -112,7 +112,7 @@
   
   <meta property="og:site_name" content="Eduardo Dávila">
   <meta property="og:url" content="https://www.eduardodavila.com/cv/">
-  <meta property="og:title" content="CV | Eduardo Dávila">
+  <meta property="og:title" content="Bio | Eduardo Dávila">
   <meta property="og:description" content="Eduardo Dávila"><meta property="og:image" content="https://www.eduardodavila.com/img/icon-192.png">
   <meta property="twitter:image" content="https://www.eduardodavila.com/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -140,7 +140,7 @@ StatCounter"></a></div></noscript>
 
 
 
-  <title>CV | Eduardo Dávila</title>
+  <title>Bio | Eduardo Dávila</title>
 
 </head>
 
@@ -344,7 +344,7 @@ StatCounter"></a></div></noscript>
     
   
 <div class="universal-wrapper pt-3">
-  <h1 itemprop="name">CV</h1>
+  <h1 itemprop="name">Bio</h1>
 
   
 
@@ -364,6 +364,8 @@ B.A. in Economics, Universitat Pompeu Fabra, 2008</p>
 <p><strong>Academic Positions</strong><br />
 Assistant Professor of Economics, Yale University, 2018-<br />
 NBER, Faculty Research Fellow, 2017-</p>
+
+<p>Meet my better half <a href="https://www.luciatian.com" target="_blank">here</a></p>
 </div>
   
   <ul class="list-unstyled">
