--- a/index.html
+++ b/index.html
@@ -464,11 +464,11 @@ Assistant Professor of Economics, Yale University<br />
 
 <p><strong>New and updated drafts</strong></p>
 
+<p><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a>, with Ben Hébert, April 2020</p>
+
 <p><a href="research/davila_goldstein_deposit.pdf" target="_blank">Optimal Deposit Insurance</a>, with Itay Goldstein, February 2020</p>
 
 <p><a href="research/optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a>, January 2020</p>
-
-<p><a href="research/davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a>, with Cecilia Parlatore, January 2020</p>
 
 
     <div class="row">
