--- a/teaching/index.html
+++ b/teaching/index.html
@@ -359,17 +359,10 @@ StatCounter"></a></div></noscript>
 
 <p>Current Students: <a href="https://canvas.yale.edu/" title="Canvas@Yale" target="_blank"><strong>See Canvas</strong></a></p>
 
-<h2 id="fall-2019">Fall 2019</h2>
+<h2 id="fall-2020">Fall 2020</h2>
 
 <ul>
-<li>Mathematical Economics: General Equilibrium Theory  (Econ 350a)</li>
-<li>General Economic Theory: Microeconomics (Econ 500a) (with Larry Samuelson)</li>
-</ul>
-
-<h2 id="spring-2020">Spring 2020</h2>
-
-<ul>
-<li>Mathematical Economics II: Foundations of Macroeconomics and Finance (Econ 531b)  (with Herakles Polemarchakis)</li>
+<li>Financial Economics (Econ 251)</li>
 </ul>
 </div>
   
