--- a/cv/index.html
+++ b/cv/index.html
@@ -365,7 +365,7 @@ B.A. in Economics, Universitat Pompeu Fabra, 2008</p>
 Assistant Professor of Economics, Yale University, 2018-<br />
 NBER, Faculty Research Fellow, 2017-</p>
 
-<p>Meet my better half <a href="https://www.luciatian.com" target="_blank">here</a></p>
+<p>Meet my better half <strong><a href="https://luciatian.com" target="_blank">here</a></strong></p>
 </div>
   
   <ul class="list-unstyled">
