--- a/research/index.html
+++ b/research/index.html
@@ -359,7 +359,7 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="pecuniaryexternalities.pdf" target="_blank">Pecuniary Externalities in Economies with Financial Frictions</a></strong>, with Anton Korinek.<br />
 <em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://doi.org/10.1093/restud/rdx010" target="_blank">Link</a></strong>, <strong><a href="davila_korinek_pecuniary.txt" target="_blank">BibTeX</a></strong><br />
-<sub> This paper subsumes my earlier working paper &ldquo;<a href="davila_dissecting.pdf" target="_blank">Dissecting Fire Sales Externalities</a>&rdquo;. It was previously circulated as &ldquo;Fire-Sale Externalities&rdquo;. <sub></p>
+<sub> This paper was previously circulated as &ldquo;Fire-Sale Externalities&rdquo;. It subsumes my earlier working paper &ldquo;<a href="davila_dissecting.pdf" target="_blank">Dissecting Fire Sales Externalities</a>&rdquo;. <sub></p>
 
 <p><strong><a href="beliefsleverage.pdf" target="_blank">House Price Beliefs and Mortgage Leverage Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel. <em>The Review of Economic Studies</em>, Volume 86, Issue 6, November 2019, Pages 2403–2452. <strong><a href="https://doi.org/10.1093/restud/rdy068" target="_blank">Link</a></strong>, <strong><a href="bdks_beliefs_leverage.txt" target="_blank">BibTeX</a></strong>.</p>
 
