--- a/discussions/index.html
+++ b/discussions/index.html
@@ -355,7 +355,25 @@ StatCounter"></a></div></noscript>
 
 <div class="universal-wrapper">
   
-  <div class="article-style" itemprop="articleBody"><p><strong>The Financial Crisis Bailouts: What They Cost Taxpayers and Who Reaped The Direct Benefits, <a href="davila_discussion_lucas.pdf" target="_blank">SLIDES</a></strong><br />
+  <div class="article-style" itemprop="articleBody"><p><strong>Market Feedback: Who Learns What?, <a href="davila_discussion_gsy.pdf" target="_blank">SLIDES</a></strong><br />
+by  Itay Goldstein, Jan Schneemeier, and Liyan Yang<br />
+SFS Cavalcade, 2020</p>
+
+<p><strong>Bank Competition, Lending Technologies, and
+Credit Availability: Evidence Using Antitrust
+Regulatory Frictions, <a href="davila_discussion_berger_kim.pdf" target="_blank">SLIDES</a></strong><br />
+by Allen N. Berger and Dasol Kim<br />
+AEA Meetings, 2020</p>
+
+<p><strong>Liquidity versus Information Efficiency, <a href="davila_discussion_glebkin.pdf" target="_blank">SLIDES</a></strong><br />
+by Sergei Glebkin<br />
+AFA Meetings, 2020</p>
+
+<p><strong>A Dynamic Theory of Multiple Borrowing, <a href="davila_discussion_liu.pdf" target="_blank">SLIDES</a></strong><br />
+by Daniel Green and Ernest Liu<br />
+NYU Stern Five Star Conference, 2019</p>
+
+<p><strong>The Financial Crisis Bailouts: What They Cost Taxpayers and Who Reaped The Direct Benefits, <a href="davila_discussion_lucas.pdf" target="_blank">SLIDES</a></strong><br />
 by Deborah Lucas<br />
 Shadow Open Market Committee, 2019</p>
 
