--- a/research/index.html
+++ b/research/index.html
@@ -380,13 +380,17 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, January 2020</p>
 
-<p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, April 2020</p>
+<p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, June 2020</p>
 
 <p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, August 2018 (substantially revised draft coming soon)</p>
 
 <p><strong>​<a href="davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>, with Thomas Philippon, December 2017 (substantially revised draft coming soon)</p>
 
 <p><strong><a href="davila_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond Design</a></strong>, with Charles-Henri Weymuller, September 2017 (substantially revised draft coming soon)</p>
+
+<p><strong>Prudential Policy with Distorted Beliefs</strong>, with Ansgar Walther, draft coming soon</p>
+
+<p><strong>The Value of Arbitrage</strong>, with Cecilia Parlatore, draft coming soon</p>
 
 <h1 id="inactive-working-papers">Inactive Working Papers</h1>
 
