--- a/discussions/index.html
+++ b/discussions/index.html
@@ -355,8 +355,13 @@ StatCounter"></a></div></noscript>
 
 <div class="universal-wrapper">
   
-  <div class="article-style" itemprop="articleBody"><p><strong>Market Feedback: Who Learns What?, <a href="davila_discussion_gsy.pdf" target="_blank">SLIDES</a></strong><br />
-by  Itay Goldstein, Jan Schneemeier, and Liyan Yang<br />
+  <div class="article-style" itemprop="articleBody"><p><strong>Capital Structure and Hedging Demand with
+Incomplete Markets, <a href="davila_discussion_bcg.pdf" target="_blank">SLIDES</a></strong><br />
+by Alberto Bisin, Gian Luca Clementi, and Piero Gottardi<br />
+Cambridge Corporate Finance Theory Symposium, 2020</p>
+
+<p><strong>Market Feedback: Who Learns What?, <a href="davila_discussion_gsy.pdf" target="_blank">SLIDES</a></strong><br />
+by Itay Goldstein, Jan Schneemeier, and Liyan Yang<br />
 SFS Cavalcade, 2020</p>
 
 <p><strong>Bank Competition, Lending Technologies, and
