--- a/index.html
+++ b/index.html
@@ -464,11 +464,15 @@ Assistant Professor of Economics, Yale University<br />
 
 <p><strong>New and updated drafts</strong></p>
 
+<p><a href="research/davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a>, with Ansgar Walther, September 2020</p>
+
+<p><a href="research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a>, with Cecilia Parlatore, September 2020</p>
+
+<p><a href="research/davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a>, September 2020</p>
+
 <p><a href="research/davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a>, with Ben Hébert, June 2020</p>
 
-<p><a href="research/davila_goldstein_deposit.pdf" target="_blank">Optimal Deposit Insurance</a>, with Itay Goldstein, February 2020</p>
-
-<p><a href="research/davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a>, January 2020</p>
+<p><a href="research/davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a>, with Itay Goldstein, February 2020</p>
 
 
     <div class="row">
