--- a/research/index.html
+++ b/research/index.html
@@ -357,38 +357,36 @@ StatCounter"></a></div></noscript>
   
   <div class="article-style" itemprop="articleBody">
 
-<p><strong><a href="pecuniaryexternalities.pdf" target="_blank">Pecuniary Externalities in Economies with Financial Frictions</a></strong>, with Anton Korinek.<br />
-<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://doi.org/10.1093/restud/rdx010" target="_blank">Link</a></strong>, <strong><a href="davila_korinek_pecuniary.txt" target="_blank">BibTeX</a></strong><br />
+<p><strong><a href="davila_korinek_pecuniary.pdf" target="_blank">Pecuniary Externalities in Economies with Financial Frictions</a></strong>, with Anton Korinek.<br />
+<em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395. <strong><a href="https://doi.org/10.1093/restud/rdx010" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_korinek_pecuniary.txt" target="_blank">BibTeX</a></strong><br />
 <sub> This paper was previously circulated as &ldquo;Fire-Sale Externalities&rdquo;. It subsumes my earlier working paper &ldquo;<a href="davila_dissecting.pdf" target="_blank">Dissecting Fire Sales Externalities</a>&rdquo;. <sub></p>
 
-<p><strong><a href="beliefsleverage.pdf" target="_blank">House Price Beliefs and Mortgage Leverage Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel. <em>The Review of Economic Studies</em>, Volume 86, Issue 6, November 2019, Pages 2403–2452. <strong><a href="https://doi.org/10.1093/restud/rdy068" target="_blank">Link</a></strong>, <strong><a href="bdks_beliefs_leverage.txt" target="_blank">BibTeX</a></strong>.</p>
+<p><strong><a href="beliefsleverage.pdf" target="_blank">House Price Beliefs and Mortgage Leverage Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel. <em>The Review of Economic Studies</em>, Volume 86, Issue 6, November 2019, Pages 2403–2452. <strong><a href="https://doi.org/10.1093/restud/rdy068" target="_blank">Link</a></strong>, <strong><a href="bibtex/bdks_beliefs_leverage.txt" target="_blank">BibTeX</a></strong>.</p>
 
-<p><strong><a href="davila_walther_bailouts.pdf" target="_blank">Does Size Matter? Bailouts with Large and Small Banks</a></strong>, with Ansgar Walther. <em>Journal of Financial Economics</em>, Volume 136, Issue 1, April 2020, Pages 1–22. <strong><a href="https://doi.org/10.1016/j.jfineco.2019.09.005" target="_blank">Link</a></strong>, <strong><a href="davila_walther_bailouts.txt" target="_blank">BibTeX</a></strong>.</p>
+<p><strong><a href="davila_walther_bailouts.pdf" target="_blank">Does Size Matter? Bailouts with Large and Small Banks</a></strong>, with Ansgar Walther. <em>Journal of Financial Economics</em>, Volume 136, Issue 1, April 2020, Pages 1–22. <strong><a href="https://doi.org/10.1016/j.jfineco.2019.09.005" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_walther_bailouts.txt" target="_blank">BibTeX</a></strong>.</p>
 
-<p><strong><a href="davila_bankruptcy.pdf" target="_blank">Using Elasticities to Derive Optimal Bankruptcy Exemptions</a></strong>. <em>The Review of Economic Studies</em>, Volume 87, Issue 2, March 2020, Pages 870–913. <strong><a href="https://doi.org/10.1093/restud/rdz043" target="_blank">Link</a></strong>, <strong><a href="davila_bankruptcy.txt" target="_blank">BibTeX</a></strong>.</p>
+<p><strong><a href="davila_exemptions.pdf" target="_blank">Using Elasticities to Derive Optimal Bankruptcy Exemptions</a></strong>. <em>The Review of Economic Studies</em>, Volume 87, Issue 2, March 2020, Pages 870–913. <strong><a href="https://doi.org/10.1093/restud/rdz043" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_exemptions.txt" target="_blank">BibTeX</a></strong>.</p>
 
 <p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore, May 2020.
-<em>The Journal of Finance</em>, Forthcoming.</p>
-
-<h1 id="under-revision">Under Revision</h1>
-
-<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>, January 2020</p>
+<em>The Journal of Finance</em>, Forthcoming. <strong><a href="bibtex/davila_parlatore_trading_costs.txt" target="_blank">BibTeX</a></strong></p>
 
 <h1 id="working-papers">Working Papers</h1>
 
-<p><strong><a href="davila_goldstein_deposit.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein, February 2020</p>
+<p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, September 2020</p>
 
-<p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, January 2020</p>
+<p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, September 2020</p>
+
+<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>, September 2020</p>
 
 <p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, June 2020</p>
 
-<p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, August 2018 (substantially revised draft coming soon)</p>
+<p><strong><a href="davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein, February 2020</p>
+
+<p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, January 2020</p>
 
 <p><strong>​<a href="davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>, with Thomas Philippon, December 2017 (substantially revised draft coming soon)</p>
 
 <p><strong><a href="davila_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond Design</a></strong>, with Charles-Henri Weymuller, September 2017 (substantially revised draft coming soon)</p>
-
-<p><strong>Prudential Policy with Distorted Beliefs</strong>, with Ansgar Walther, draft coming soon</p>
 
 <p><strong>The Value of Arbitrage</strong>, with Cecilia Parlatore, draft coming soon</p>
 
