--- a/research/index.html
+++ b/research/index.html
@@ -378,6 +378,8 @@ StatCounter"></a></div></noscript>
 
 <h1 id="working-papers">Working Papers</h1>
 
+<p><strong><a href="davila_walther_corrective_2020_11_25.pdf" target="_blank">Corrective Financial Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, November 2020</p>
+
 <p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, October 2020. Code and data are available <strong><a href="https://github.com/edavila/identifying_price_informativeness" target="_blank">here</a></strong>.</p>
 
 <p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, October 2020. Code and data are available <strong><a href="https://github.com/edavila/volatility_informativeness" target="_blank">here</a></strong>.</p>
