--- a/index.html
+++ b/index.html
@@ -481,6 +481,8 @@ Assistant Professor of Economics, Yale University<br />
 
 <p><strong>New and updated drafts</strong></p>
 
+<p><a href="research/davila_walther_corrective_2020_11_25.pdf" target="_blank">Corrective Financial Regulation with Imperfect Instruments</a>, with Ansgar Walther, November 2020</p>
+
 <p><a href="research/davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a>, with Ansgar Walther, September 2020</p>
 
 <p><a href="research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a>, with Cecilia Parlatore, September 2020</p>
