--- a/index.html
+++ b/index.html
@@ -479,21 +479,15 @@ Assistant Professor of Economics, Yale University<br />
 <a href="mailto:eduardo.davila@yale.edu" target="_blank">eduardo.davila@yale.edu</a><br />
 <strong><a href="/cv/davila_cv.pdf">Full CV here (pdf)</a></strong></p>
 
-<p><strong>New and updated drafts</strong></p>
+<p><strong>New and recently updated drafts</strong></p>
+
+<p><a href="research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a>, with Cecilia Parlatore, February 2021</p>
+
+<p><a href="research/davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a>, with Cecilia Parlatore, January 2021</p>
 
 <p><a href="research/davila_walther_corrective_2020_11_25.pdf" target="_blank">Corrective Financial Regulation with Imperfect Instruments</a>, with Ansgar Walther, November 2020</p>
 
-<p><a href="research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a>, with Cecilia Parlatore, October 2020</p>
-
-<p><a href="research/davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a>, with Cecilia Parlatore, October 2020</p>
-
 <p><a href="research/davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a>, with Ansgar Walther, September 2020</p>
-
-<p><a href="research/davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a>, September 2020</p>
-
-<p><a href="research/davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a>, with Ben Hébert, June 2020</p>
-
-<p><a href="research/davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a>, with Itay Goldstein, February 2020</p>
 
 
     <div class="row">
