--- a/research/index.html
+++ b/research/index.html
@@ -392,7 +392,7 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond Design</a></strong>, with Charles-Henri Weymuller, September 2017 (substantially revised draft coming soon)</p>
 
-<p><strong><a href="2019_01_04_assa.pdf" target="_blank">The Value of Arbitrage</a></strong>, with Cecilia Parlatore, draft coming soon</p>
+<p>The Value of Arbitrage, with Daniel Graves and Cecilia Parlatore, draft coming soon</p>
 
 <h1 id="inactive-working-papers">Inactive Working Papers</h1>
 
