--- a/research/index.html
+++ b/research/index.html
@@ -363,9 +363,9 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="beliefsleverage.pdf" target="_blank">House Price Beliefs and Mortgage Leverage Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel. <em>The Review of Economic Studies</em>, Volume 86, Issue 6, November 2019, Pages 2403–2452. <strong><a href="https://doi.org/10.1093/restud/rdy068" target="_blank">Link</a></strong>, <strong><a href="bibtex/bdks_beliefs_leverage.txt" target="_blank">BibTeX</a></strong>.</p>
 
-<p><strong><a href="davila_walther_bailouts.pdf" target="_blank">Does Size Matter? Bailouts with Large and Small Banks</a></strong>, with Ansgar Walther. <em>Journal of Financial Economics</em>, Volume 136, Issue 1, April 2020, Pages 1–22. <strong><a href="https://doi.org/10.1016/j.jfineco.2019.09.005" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_walther_bailouts.txt" target="_blank">BibTeX</a></strong>.</p>
-
 <p><strong><a href="davila_exemptions.pdf" target="_blank">Using Elasticities to Derive Optimal Bankruptcy Exemptions</a></strong>. <em>The Review of Economic Studies</em>, Volume 87, Issue 2, March 2020, Pages 870–913. <strong><a href="https://doi.org/10.1093/restud/rdz043" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_exemptions.txt" target="_blank">BibTeX</a></strong>.</p>
+
+<p><strong><a href="davila_walther_bailouts.pdf" target="_blank">Does Size Matter? Bailouts with Large and Small Banks</a></strong>, with Ansgar Walther. <em>Journal of Financial Economics</em>, Volume 136, Issue 1, April 2020, Pages 1–22. <strong><a href="https://doi.org/10.1016/j.jfineco.2019.09.005" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_walther_bailouts.txt" target="_blank">BibTeX</a></strong>.</p>
 
 <p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore, May 2020.
 <em>The Journal of Finance</em>, Forthcoming. <strong><a href="bibtex/davila_parlatore_trading_costs.txt" target="_blank">BibTeX</a></strong></p>
@@ -378,6 +378,8 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, January 2021. Code and data are available <strong><a href="https://github.com/edavila/volatility_informativeness" target="_blank">here</a></strong>.</p>
 
+<p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, June 2020</p>
+
 <h1 id="working-papers">Working Papers</h1>
 
 <p><strong><a href="davila_walther_corrective_2020_11_25.pdf" target="_blank">Corrective Financial Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, November 2020</p>
@@ -386,13 +388,11 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, February 2021. Code and data are available <strong><a href="https://github.com/edavila/identifying_price_informativeness" target="_blank">here</a></strong>.</p>
 
-<p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, June 2020</p>
-
 <p><strong>​<a href="davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>, with Thomas Philippon, December 2017 (substantially revised draft coming soon)</p>
 
 <p><strong><a href="davila_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond Design</a></strong>, with Charles-Henri Weymuller, September 2017 (substantially revised draft coming soon)</p>
 
-<p>The Value of Arbitrage, with Daniel Graves and Cecilia Parlatore, draft coming soon</p>
+<p>The Value of Arbitrage, with Daniel Graves and Cecilia Parlatore, March 2021</p>
 
 <h1 id="inactive-working-papers">Inactive Working Papers</h1>
 
