--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@ Assistant Professor of Economics, Yale University<br>
 <a href="mailto:eduardo.davila@yale.edu">eduardo.davila@yale.edu</a><br>
 <strong><a href="/cv/davila_cv.pdf">Full CV here (pdf)</a></strong></p>
 <p><strong>New and recently updated drafts</strong></p>
+<p><a href="research/davila_graves_parlatore_value_arbitrage.pdf">The Value of Arbitrage</a>, with Daniel Graves and Cecilia Parlatore, July 2021</p>
 <p><a href="research/davila_walther_prudential_beliefs.pdf">Prudential Policy with Distorted Beliefs</a>, with Ansgar Walther, May 2021</p>
-<p>The Value of Arbitrage, with Daniel Graves and Cecilia Parlatore, March 2021</p>
 <p><a href="research/davila_parlatore_identifying.pdf">Identifying Price Informativeness</a>, with Cecilia Parlatore, February 2021</p>
 <p><a href="research/davila_walther_corrective_2020_11_25.pdf">Corrective Financial Regulation with Imperfect Instruments</a>, with Ansgar Walther, November 2020</p>
 
