--- a/research/index.html
+++ b/research/index.html
@@ -361,20 +361,19 @@ StatCounter"></a></div></noscript>
 <p><strong><a href="beliefsleverage.pdf">House Price Beliefs and Mortgage Leverage Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel. <em>The Review of Economic Studies</em>, Volume 86, Issue 6, November 2019, Pages 2403–2452. <strong><a href="https://doi.org/10.1093/restud/rdy068">Link</a></strong>, <strong><a href="bibtex/bdks_beliefs_leverage.txt">BibTeX</a></strong>.</p>
 <p><strong><a href="davila_exemptions.pdf">Using Elasticities to Derive Optimal Bankruptcy Exemptions</a></strong>. <em>The Review of Economic Studies</em>, Volume 87, Issue 2, March 2020, Pages 870–913. <strong><a href="https://doi.org/10.1093/restud/rdz043">Link</a></strong>, <strong><a href="bibtex/davila_exemptions.txt">BibTeX</a></strong>.</p>
 <p><strong><a href="davila_walther_bailouts.pdf">Does Size Matter? Bailouts with Large and Small Banks</a></strong>, with Ansgar Walther. <em>Journal of Financial Economics</em>, Volume 136, Issue 1, April 2020, Pages 1–22. <strong><a href="https://doi.org/10.1016/j.jfineco.2019.09.005">Link</a></strong>, <strong><a href="bibtex/davila_walther_bailouts.txt">BibTeX</a></strong>.</p>
-<p><strong><a href="davila_parlatore_trading_costs.pdf">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore, May 2020.
-<em>The Journal of Finance</em>, Forthcoming. <strong><a href="bibtex/davila_parlatore_trading_costs.txt">BibTeX</a></strong></p>
+<p><strong><a href="davila_parlatore_trading_costs.pdf">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore. <em>The Journal of Finance</em>, Volume 76, Issue 3, June 2021, Pages 1471-1539. <strong><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/jofi.13008">Link</a></strong>, <strong><a href="bibtex/davila_parlatore_trading_costs.txt">BibTeX</a></strong></p>
 <h1 id="under-revision">Under Revision</h1>
 <p><strong><a href="davila_goldstein_optimal_di.pdf">Optimal Deposit Insurance</a></strong>, with Itay Goldstein, April 2021</p>
 <p><strong><a href="davila_parlatore_volatility.pdf">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, January 2021. Code and data are available <strong><a href="https://github.com/edavila/volatility_informativeness">here</a></strong>.</p>
 <p><strong><a href="davila_optimal_ftt.pdf">Optimal Financial Transaction Taxes</a></strong>, September 2020</p>
 <p><strong><a href="davila_hebert_corporate_taxation.pdf">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, June 2020</p>
 <h1 id="working-papers">Working Papers</h1>
+<p><strong><a href="davila_graves_parlatore_value_arbitrage">The Value of Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore, July 2021</p>
 <p><strong><a href="davila_walther_prudential_beliefs.pdf">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, May 2021</p>
 <p><strong><a href="davila_parlatore_identifying.pdf">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, February 2021. Code and data are available <strong><a href="https://github.com/edavila/identifying_price_informativeness">here</a></strong>.</p>
 <p><strong><a href="davila_walther_corrective_2020_11_25.pdf">Corrective Financial Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, November 2020</p>
 <p><strong>​<a href="davila_philippon_inc_shocks.pdf">Incompleteness Shocks</a></strong>, with Thomas Philippon, December 2017 (substantially revised draft coming soon)</p>
 <p><strong><a href="davila_weymuller_optimal_joint_bond.pdf">Optimal Joint Bond Design</a></strong>, with Charles-Henri Weymuller, September 2017 (substantially revised draft coming soon)</p>
-<p>The Value of Arbitrage, with Daniel Graves and Cecilia Parlatore, March 2021</p>
 <h1 id="inactive-working-papers">Inactive Working Papers</h1>
 <p><strong><a href="davila_cumulant.pdf">Myopic Portfolio Choice with Higher Cumulants​</a></strong></p>
 </div>
