--- a/research/index.html
+++ b/research/index.html
@@ -368,7 +368,7 @@ StatCounter"></a></div></noscript>
 <p><strong><a href="davila_optimal_ftt.pdf">Optimal Financial Transaction Taxes</a></strong>, September 2020</p>
 <p><strong><a href="davila_hebert_corporate_taxation.pdf">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, June 2020</p>
 <h1 id="working-papers">Working Papers</h1>
-<p><strong><a href="davila_graves_parlatore_value_arbitrage">The Value of Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore, July 2021</p>
+<p><strong><a href="davila_graves_parlatore_value_arbitrage.pdf">The Value of Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore, July 2021</p>
 <p><strong><a href="davila_walther_prudential_beliefs.pdf">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, May 2021</p>
 <p><strong><a href="davila_parlatore_identifying.pdf">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, February 2021. Code and data are available <strong><a href="https://github.com/edavila/identifying_price_informativeness">here</a></strong>.</p>
 <p><strong><a href="davila_walther_corrective_2020_11_25.pdf">Corrective Financial Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, November 2020</p>
