--- a/discussions/index.html
+++ b/discussions/index.html
@@ -355,22 +355,22 @@ StatCounter"></a></div></noscript>
 
 <div class="universal-wrapper">
   
-  <div class="article-style" itemprop="articleBody"><p><strong>Delayed Crises and Slow Recoveries, <a href="davila_discussion_liu_wang_yang.pdf">SLIDES</a></strong>
+  <div class="article-style" itemprop="articleBody"><p><strong>Delayed Crises and Slow Recoveries, <a href="davila_discussion_liu_wang_yang.pdf">SLIDES</a></strong><br>
 by Xuewen Liu, Pengfei Wang, and Zhongchao Yang
 China International Conference in Finance (CICF), 2021</p>
-<p><strong>Is There Too Much Benchmarking in Asset Management?, <a href="davila_discussion_kklp.pdf">SLIDES</a></strong>
+<p><strong>Is There Too Much Benchmarking in Asset Management?, <a href="davila_discussion_kklp.pdf">SLIDES</a></strong><br>
 by Anil Kashyap, Natalia Kovrijnykh, Jian Li, and Anna Pavlova
 JHU Carey Finance Conference, 2021</p>
-<p><strong>Renegotiation in Debt Chains, <a href="davila_discussion_glode_opp.pdf">SLIDES</a></strong>
+<p><strong>Renegotiation in Debt Chains, <a href="davila_discussion_glode_opp.pdf">SLIDES</a></strong><br>
 by Vincent Glode and Christian Opp
 SFS Cavalcade, 2021</p>
-<p><strong>Can the Cure Kill the Patient? Corporate Credit Interventions and Debt Overhang, <a href="davila_discussion_crouzet_tourre.pdf">SLIDES</a></strong>
+<p><strong>Can the Cure Kill the Patient? Corporate Credit Interventions and Debt Overhang, <a href="davila_discussion_crouzet_tourre.pdf">SLIDES</a></strong><br>
 by Nicolas Crouzet and Fabrice Tourre
 Adam Smith Workshop, 2021</p>
-<p><strong>Alpha and Beta Information, <a href="davila_discussion_hssy.pdf">SLIDES</a></strong>
+<p><strong>Alpha and Beta Information, <a href="davila_discussion_hssy.pdf">SLIDES</a></strong><br>
 by Shiyang Huang, Jan Schneemeier, Avanidhar Subrahmanyam, and Liyan Yang
 MFA Meetings, 2021</p>
-<p><strong>Dissecting Mechanisms of Financial Crises: Intermediation and Sentiment, <a href="davila_discussion_kl.pdf">SLIDES</a></strong>
+<p><strong>Dissecting Mechanisms of Financial Crises: Intermediation and Sentiment, <a href="davila_discussion_kl.pdf">SLIDES</a></strong><br>
 by Arvind Krishnamurthy and Wenhao Li
 AEA Meetings, 2021</p>
 <p><strong>Capital Structure and Hedging Demand with Incomplete Markets, <a href="davila_discussion_bcg.pdf">SLIDES</a></strong><br>
