--- a/discussions/index.html
+++ b/discussions/index.html
@@ -443,7 +443,7 @@ Columbia Safe Assets Conference, 2015</p>
 by Anton Korinek<br>
 NBER International Finance Fall Meeting, 2014</p>
 <p><strong>A Theory of Power Law Distributions for the Returns to Capital and of the Credit Spread Puzzle, <a href="davila_discussion_geerolf.pdf">SLIDES</a></strong><br>
-by François Geerolf
+by François Geerolf<br>
 Barcelona GSE Summer Forum Macro-Finance, 2014</p>
 </div>
   
