--- a/research/index.html
+++ b/research/index.html
@@ -381,7 +381,7 @@ StatCounter"></a></div></noscript>
 
 <h1 id="working-papers">Working Papers</h1>
 
-<p><strong><a href="davila_walther_corrective.pdf" target="_blank">Corrective Financial Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, July 2021</p>
+<p><strong><a href="davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, August 2021</p>
 
 <p><strong><a href="davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore, July 2021</p>
 
