--- a/research/index.html
+++ b/research/index.html
@@ -369,15 +369,15 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore. <em>The Journal of Finance</em>, Volume 76, Issue 3, June 2021, Pages 1471-1539. <strong><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/jofi.13008" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_parlatore_trading_costs.txt" target="_blank">BibTeX</a></strong>.</p>
 
+<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>. <em>The Journal of Finance</em>, November 2021. Forthcoming. <strong><a href="bibtex/davila_optimal_ftt.txt" target="_blank">BibTeX</a></strong>.</p>
+
 <h1 id="under-revision">Under Revision</h1>
 
-<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>, August 2021</p>
+<p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, October 2021</p>
 
 <p><strong><a href="davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein, April 2021</p>
 
 <p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, January 2021. Code and data are available <strong><a href="https://github.com/edavila/volatility_informativeness" target="_blank">here</a></strong>.</p>
-
-<p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Ben Hébert, June 2020</p>
 
 <h1 id="working-papers">Working Papers</h1>
 
