--- a/index.html
+++ b/index.html
@@ -481,6 +481,8 @@ Assistant Professor of Economics, Yale University<br />
 
 <p><strong>New and recently updated drafts</strong></p>
 
+<p><a href="davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with Heterogeneous Individuals</a>, with Andreas Schaab, December 2021</p>
+
 <p><a href="research/davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a>, with Ben Hébert, October 2021</p>
 
 <p><a href="research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect Instruments</a>, with Ansgar Walther, August 2021</p>
