--- a/discussions/index.html
+++ b/discussions/index.html
@@ -355,7 +355,15 @@ StatCounter"></a></div></noscript>
 
 <div class="universal-wrapper">
   
-  <div class="article-style" itemprop="articleBody"><p><strong>Delayed Crises and Slow Recoveries, <a href="davila_discussion_liu_wang_yang.pdf" target="_blank">SLIDES</a></strong><br />
+  <div class="article-style" itemprop="articleBody"><p><strong>(In)efficiency in Information Acquisition and Aggregation through Prices, <a href="davila_discussion_psv.pdf" target="_blank">SLIDES</a></strong><br />
+by Alessandro Pavan, Savitar Sundaresan, and Xavier Vives
+Econometric Society Meetings, 2022</p>
+
+<p><strong>The Political Economy of Prudential Regulation, <a href="davila_discussion_rola_janicka.pdf" target="_blank">SLIDES</a></strong><br />
+by Magdalena Rola-Janicka
+FIN-FIRE-Workshop, 2021</p>
+
+<p><strong>Delayed Crises and Slow Recoveries, <a href="davila_discussion_liu_wang_yang.pdf" target="_blank">SLIDES</a></strong><br />
 by Xuewen Liu, Pengfei Wang, and Zhongchao Yang
 China International Conference in Finance (CICF), 2021</p>
 
