--- a/contact/index.html
+++ b/contact/index.html
@@ -355,10 +355,15 @@ StatCounter"></a></div></noscript>
 
 <div class="universal-wrapper">
   
-  <div class="article-style" itemprop="articleBody"><p><strong>Address:</strong><br />
+  <div class="article-style" itemprop="articleBody">
+
+<p><strong>Address:</strong><br />
 Yale University<br />
-Department of Economics<br />
-28 Hillhouse Avenue, Room 304<br />
+Department of Economics</p>
+
+<h1 id="28-hillhouse-avenue-room-304">28 Hillhouse Avenue, Room 304</h1>
+
+<p>451 College, Room 210
 New Haven, CT 06520-8268<br />
 Email: eduardo.davila@yale.edu<br />
 ​Web: <a href="www.eduardodavila.com" target="_blank">www.eduardodavila.com</a></p>
